deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rentals-app
  labels:
    app: car-rentals-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-rentals-app
  template:
    metadata:
      labels:
        app: car-rentals-app
    spec:
      containers:
      - name: python-app
        image: hemanth0914/car-rentals:latest
        ports:
        - containerPort: 8000
