service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-rentals-app-service
spec:
  type: NodePort
  selector:
    app: car-rentals-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
