ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: cars.rentals.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: car-rentals-app-service
            port:
              number: 80
